--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activity.main.MainActivity">
+<layout>
+   <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       tools:context=".ui.activity.main.MainActivity"
+       android:fitsSystemWindows="true"
+       android:id="@+id/drawerLayout"
+       tools:openDrawer="start">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+         <androidx.fragment.app.FragmentContainerView
+             android:id="@+id/container_main"
+             android:name="androidx.navigation.fragment.NavHostFragment"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             app:navGraph="@navigation/main_navigation"
+             app:defaultNavHost="true"
+             />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+         <com.google.android.material.navigation.NavigationView
+             android:id="@+id/navVies"
+             android:layout_width="wrap_content"
+             android:layout_height="match_parent"
+             android:layout_gravity="start"
+             android:fitsSystemWindows="true"
+             app:itemTextAppearance="@style/NavigationViewStyle"
+             app:headerLayout="@layout/imageview_planet"
+             app:menu="@menu/navigation_menu">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/exit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="@string/exit"
+                android:textAllCaps="false"
+                android:background="@drawable/button_purple"
+                android:textColor="@color/textcolor_button_purple"
+                android:layout_margin="10dp"/>
+
+         </com.google.android.material.navigation.NavigationView>
+
+
+   </androidx.drawerlayout.widget.DrawerLayout>
+</layout>
