--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -1,11 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activity.run.RunActivity" />
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.activity.run.RunActivity" />
+
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnStartOrFinish"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/button_purple"
+            android:text="@string/start"
+            android:textColor="@color/textcolor_button_purple"
+            android:textSize="20sp"
+            android:stateListAnimator="@null"
+            map:layout_constraintBottom_toBottomOf="parent"
+            map:layout_constraintEnd_toEndOf="parent"
+            map:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tvTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00:00"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:padding="5dp"
+            android:textSize="40sp"
+            android:translationZ="1dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            map:layout_constraintBottom_toTopOf="@id/btnStartOrFinish"
+            map:layout_constraintStart_toStartOf="@id/btnStartOrFinish"
+            map:layout_constraintEnd_toEndOf="@id/btnStartOrFinish"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
