--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -13,7 +14,39 @@
             android:layout_height="match_parent"
             tools:context=".ui.activity.run.RunActivity" />
 
+        <LinearLayout
+            android:id="@+id/toolbarRunContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:translationZ="3dp"
+            android:background="@color/purple_700"
+            android:padding="10dp"
+            map:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:id="@+id/tvTimer"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                tools:text="00:00:00"
+                android:textSize="40sp"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/white"
+                android:translationZ="1dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tvDistance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_gravity="bottom"
+                android:textSize="25sp"
+                tools:text="20 000 m"/>
+
+        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnStartOrFinish"
@@ -30,22 +63,6 @@
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tvTimer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00:00"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:padding="5dp"
-            android:textSize="40sp"
-            android:translationZ="1dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            map:layout_constraintBottom_toTopOf="@id/btnStartOrFinish"
-            map:layout_constraintStart_toStartOf="@id/btnStartOrFinish"
-            map:layout_constraintEnd_toEndOf="@id/btnStartOrFinish"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
