--- a/app/src/main/res/drawable/point_finish.xml
+++ b/app/src/main/res/drawable/point_finish.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
-   <solid android:color="@color/purple_500"/>
+   <solid android:color="@color/red"/>
 
     <size
         android:width="30dp"
         android:height="30dp"/>
-
-    <stroke android:width="4dp"
-        android:color="@color/purple_700"/>
 </shape>
