--- a/app/src/main/res/layout/dialog_reminder_date.xml
+++ b/app/src/main/res/layout/dialog_reminder_date.xml
@@ -1,49 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_white_circle"
         android:padding="10dp"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <TextView
-            android:id="@+id/tvDay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/day"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tvMonth"/>
-
-        <NumberPicker
-            android:id="@+id/np_day"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tvDay"
-            app:layout_constraintStart_toStartOf="@id/tvDay"
-            app:layout_constraintEnd_toEndOf="@id/tvDay"/>
-
-        <TextView
-            android:id="@+id/tvMonth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/month"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tvDay"/>
-
-        <NumberPicker
-            android:id="@+id/np_month"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tvMonth"
-            app:layout_constraintStart_toStartOf="@id/tvMonth"
-            app:layout_constraintEnd_toEndOf="@id/tvMonth"/>
-
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recDayOfWeek"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+          android:orientation="horizontal"
+          tools:listitem="@layout/item_day_of_week"
+          app:layout_constraintTop_toTopOf="parent"
+          />
 
         <TextView
             android:id="@+id/tvTime"
@@ -51,9 +23,9 @@
             android:layout_height="wrap_content"
             android:text="@string/time"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/np_day"
-            app:layout_constraintStart_toStartOf="@id/np_day"
-            app:layout_constraintEnd_toEndOf="@id/np_month"/>
+            app:layout_constraintTop_toBottomOf="@id/recDayOfWeek"
+            app:layout_constraintStart_toStartOf="@id/np_hour"
+            app:layout_constraintEnd_toEndOf="@id/np_minute"/>
 
         <NumberPicker
             android:id="@+id/np_hour"
@@ -61,7 +33,8 @@
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/tvTime"
-            app:layout_constraintStart_toStartOf="@id/np_day"/>
+            app:layout_constraintEnd_toStartOf="@id/np_minute"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <NumberPicker
             android:id="@+id/np_minute"
@@ -69,7 +42,8 @@
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/tvTime"
-            app:layout_constraintEnd_toEndOf="@id/np_month"/>
+            app:layout_constraintStart_toEndOf="@id/np_hour"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
         <androidx.appcompat.widget.AppCompatButton
