--- a/app/src/main/res/layout/item_reminder.xml
+++ b/app/src/main/res/layout/item_reminder.xml
@@ -15,11 +15,10 @@
         android:paddingBottom="10dp"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/purple_200"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingBottom="10dp">
+        android:background="@drawable/bg_item_purple_500_circle"
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/tvReminderText"
@@ -42,8 +41,9 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="30sp"
+            android:layout_marginStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/tvReminderText"
-            app:layout_constraintStart_toStartOf="@id/tvReminder"/>
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <ImageButton
             android:id="@+id/imgBtnEditReminder"
