--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -3,82 +3,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <import type="android.view.View" />
+        <variable
+            name="model"
+            type="com.example.senla_tz.entify.Track" />
+    </data>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="5dp"
-        android:background="@color/purple_200">
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/ic_sneaker"
-            android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="@id/tvTrack"
-            app:layout_constraintStart_toEndOf="@id/tvTrack"
-            app:layout_constraintBottom_toBottomOf="@id/tvTrack"
-            app:layout_constraintEnd_toStartOf="@id/tvDistance"
-            app:layout_constraintHorizontal_bias="0.01"/>
-
-        <TextView
-            android:id="@+id/tvTrack"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="@string/run_text"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:padding="8dp"
+            android:background="@drawable/bg_item_purple_500_circle">
 
-        <TextView
-            android:id="@+id/tvTrackDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:text="12/12/2012 12:00"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/tvTrack"
-            app:layout_constraintStart_toStartOf="@+id/tvTrack"
-            app:layout_constraintTop_toBottomOf="@id/tvTrack" />
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_sneaker"
+                android:layout_marginStart="10dp"
+                app:layout_constraintTop_toTopOf="@id/tvTrack"
+                app:layout_constraintStart_toEndOf="@id/tvTrack"
+                app:layout_constraintBottom_toBottomOf="@id/tvTrack"
+                app:layout_constraintEnd_toStartOf="@id/tvDistance"
+                app:layout_constraintHorizontal_bias="0.01"/>
 
-        <TextView
-            android:id="@+id/tvDistance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/white"
-            tools:text="1000 м"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                android:id="@+id/tvTrack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:text="@string/run_text"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/tvDistance"
-            app:layout_constraintStart_toStartOf="@id/tvDistance"
-            app:layout_constraintTop_toBottomOf="@id/tvDistance"
-            tools:text="15:00" />
+            <TextView
+                android:id="@+id/tvTrackDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="@{model.parseInDate()}"
+                tools:text="12/12/2012 12:00"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/tvTrack"
+                app:layout_constraintStart_toStartOf="@+id/tvTrack"
+                app:layout_constraintTop_toBottomOf="@id/tvTrack" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvDistance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/white"
+                tools:text="1000 м"
+                android:text="@{model.parseInDistance()}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textSize="20sp"
+                android:text="@{model.parseInTime(false)}"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/tvDistance"
+                app:layout_constraintTop_toBottomOf="@id/tvDistance"
+                tools:text="15:00" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
