--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,13 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="ButtonDayOfWeek">
+        <item name="android:textSize">12sp</item>
+        <item name="android:background">@drawable/button_purple_selected</item>
+        <item name="android:textColor">@color/textcolor_button_purple_selected</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
 
     <style name="Theme.Senla_TZ.Splash" parent="Theme.Senla_TZ">
         <item name="android:windowBackground">@color/purple_700</item>
