--- a/app/src/main/res/drawable/bg_item_purple_500_circle.xml
+++ b/app/src/main/res/drawable/bg_item_purple_500_circle.xml
@@ -4,6 +4,7 @@
     <item>
         <shape>
             <solid android:color="@color/purple_500"/>
+            <corners android:radius="20dp"/>
         </shape>
     </item>
 
