--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -2,6 +2,14 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <import type="android.view.View" />
+        <variable
+            name="viewModel"
+            type="com.example.senla_tz.ui.activity.run.RunViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -11,54 +19,62 @@
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            map:layout_constraintTop_toBottomOf="@id/toolbarRunContainer"
+            map:layout_constraintBottom_toBottomOf="parent"
             tools:context=".ui.activity.run.RunActivity" />
 
         <View
             android:id="@+id/toolbarRunContainer"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:visibility="gone"
             android:background="@color/purple_700"
+            android:visibility="gone"
             map:layout_constraintTop_toTopOf="parent"
-            />
+            tools:visibility="visible" />
 
-<!--        <LinearLayout-->
-<!--            android:id="@+id/toolbarRunContainer"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:translationZ="3dp"-->
-<!--            android:background="@color/purple_700"-->
-<!--            android:padding="10dp"-->
-<!--            map:layout_constraintTop_toTopOf="parent">-->
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/toolbarRunContainer"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:orientation="horizontal"-->
+        <!--            android:translationZ="3dp"-->
+        <!--            android:background="@color/purple_700"-->
+        <!--            android:padding="10dp"-->
+        <!--            map:layout_constraintTop_toTopOf="parent">-->
 
-            <TextView
-                android:id="@+id/tvTimer"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                tools:text="00:00:00"
-                android:textSize="40sp"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/white"
-                android:translationZ="1dp"
-                map:layout_constraintBottom_toBottomOf="@id/testtoolbar"
-                map:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/tvTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:textSize="40sp"
+            android:translationZ="1dp"
+            map:textTimer="@{viewModel.timeObserver}"
+            map:layout_constraintBottom_toBottomOf="@id/toolbarRunContainer"
+            map:layout_constraintEnd_toStartOf="@id/tvDistance"
+            map:layout_constraintHorizontal_chainStyle="spread_inside"
+            map:layout_constraintStart_toStartOf="parent"
+            tools:text="00:00:00" />
 
-            <TextView
-                android:id="@+id/tvDistance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_gravity="bottom"
-                android:textSize="25sp"
-                tools:text="20 000 m"
-                android:layout_marginBottom="5dp"
-                map:layout_constraintBottom_toBottomOf="@id/testtoolbar"
-                map:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tvDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:paddingEnd="5dp"
+            map:textDistance="@{viewModel.distanceObserver}"
+            map:layout_constraintBottom_toBottomOf="@id/toolbarRunContainer"
+            map:layout_constraintEnd_toEndOf="parent"
+            map:layout_constraintStart_toEndOf="@id/tvTimer"
+            tools:text="20 000 m" />
 
-<!--        </LinearLayout>-->
+        <!--        </LinearLayout>-->
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnStartOrFinish"
@@ -68,10 +84,10 @@
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="50dp"
             android:background="@drawable/button_purple"
+            android:stateListAnimator="@null"
             android:text="@string/start"
             android:textColor="@color/textcolor_button_purple"
             android:textSize="20sp"
-            android:stateListAnimator="@null"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintStart_toStartOf="parent" />
